# Sky_pro_corsework3

./:  .gitignore  README.md  main.py  pyproject.toml  utils.py
scripts/: utils.py
tests/: test_utils.py
tests/data/: result_data.py
