[tool.poetry]
name = "sky-pro-corsework3"
version = "0.1.0"
description = ""
authors = ["alexandr50 <dmitrymaslov2016@mail.ru>"]
readme = "README.md"
packages = [{include = "sky_pro_corsework3"}]

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
